# TennisWH-MCP

./: .gitignore  API_README.md  Dockerfile  GITHUB_PUSH_GUIDE.md  LICENSE  README.md  api_server.py  chatgpt-integration.md  chatgpt-localhost-workaround.md  chatgpt-setup-instructions.md  check-tennis.sh  deploy.sh  main.py  privacy-policy.html  pyproject.toml  pyrightconfig.json  railway.json  railway.toml  requirements-api.txt  run_mcp.sh  tennis-warehouse-openapi.json  tennis_warehouse_api.py  test_mcp_server.py
docs/: README.md  api.md  development.md  review_search.md  tools.md  usage.md
src/: __init__.py  main.py
src/api/: __init__.py  client.py  parsers.py
src/tools/: __init__.py  helpers.py  product_tools.py  search_tools.py
src/utils/: __init__.py  constants.py  validators.py
tests/: README.md  __init__.py  test_product_review.py  test_search_review.py
