[project]
name = "tennis-warehouse-mcp"
version = "0.2.0"
description = "MCP Server for Tennis Warehouse API integration - Modular Version"
requires-python = ">=3.10"
authors = [
    {name = "Avi", email = "avi@example.com"}
]
dependencies = [
    "mcp[cli]",
    "httpx",
    "requests",
    "pydantic",
    "beautifulsoup4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.api", "src.tools", "src.utils"]
py-modules = ["main", "tennis_warehouse_api"]
